# ead-splitter

./: .dockerignore  Dockerfile  README.md  package.json  pnpm-lock.yaml
.github/workflows/: docker-image.yml
backend/: .dockerignore  MANIFEST.in  pyproject.toml
backend/app/: main.py
frontend/: biome.json  package.json  pnpm-lock.yaml  rsbuild.config.ts
frontend/src/: App.css  App.tsx  index.tsx
