[project]
name = "ics-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.121.2",
    "ics>=0.7.2",
    "jinja2>=3.1.5",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "ruff>=0.9.1",
]
